chore: intsll gh pages & add deploy script

--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "frontend-bootstrap",
+  "homepage": "https://github.com/szczepanieceryk/rest-countries-api/settings/pages",
+  "name": "rest-api-countries-search",
   "version": "1.0.0",
-  "description": "Opinionated frontend bootstrap",
+  "description": "A simple app to search for countries using REST API",
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "vite build",
     "dev": "vite",
     "lint": "eslint src",
@@ -27,6 +30,7 @@
     "eslint-plugin-prettier": "5.1.3",
     "eslint-plugin-react": "7.34.0",
     "eslint-plugin-react-hooks": "4.6.0",
+    "gh-pages": "6.3.0",
     "postcss": "8.4.35",
     "prettier": "3.2.5",
     "tailwindcss": "3.4.1",
